# project-odyssey

./: .gitattributes  Cargo.toml  README.md  clear_cargo_cache.bat  copy_assets_to_debug.bat  index.html  project_odyssey.d.ts  project_odyssey.js  project_odyssey_bg.wasm.d.ts  run.bat
.cargo/: config.toml
.github/workflows/: rust.yml
assets/models/: spline_segment.glb  station.glb  train.glb  train_carriage.glb
macros/: Cargo.toml
macros/src/: lib.rs
src/: building.rs  camera.rs  debug.rs  game.rs  input.rs  lib.rs  main.rs  rail_graph.rs  spline.rs  util.rs  world.rs
src/building/: rail.rs
src/building/rail/: rail_planner.rs
src/game/: building.rs  camera.rs  cursor_feedback.rs  input.rs  placeable.rs  player.rs  selectable.rs  spline.rs  train.rs  world.rs
src/game/building/: rail.rs
src/game/building/rail/: rail_planner.rs
src/game/placeable/: destroyer.rs  rail.rs  station.rs  train.rs
src/game/placeable/rail/: rail_graph.rs  rail_planner.rs
