[package]
name = "project_odyssey"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Debug info seems to have quite a significant impact on linking times
[profile.dev-nodebug]
inherits = "dev"
debug = false
strip = "debuginfo"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = 'z'
debug = false
strip = true

[dependencies]
bevy = "0.15.0"
bevy-inspector-egui = "0.28.0"
leafwing-input-manager = { "version" = "0.16.0", features = ["egui"] }
petgraph = "0.6.5"
