[package]
name = "project_odyssey"
version = "0.1.0"
edition = "2021"

# We need optimizations, otherwise we run into linker issues https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional
# 2 works, but 3 is reco (and 2 doesn't really give that much more extra info)
[profile.dev.package."*"]
opt-level = 3
[profile.dev-nodebug.package."*"]
opt-level = 3

[profile.dev-nodebug]
inherits = "dev"
debug = false
strip = "debuginfo"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = 'z'
debug = false
strip = true

[dependencies]
project_odyssey_macros = { path = "macros" }
bevy = "0.15.0"
bevy-inspector-egui = "0.28.1"
bevy_egui = "0.31.1"
leafwing-input-manager = { "version" = "0.16.0", features = ["egui"] }
petgraph = "0.7.0"
